# flask-bp

./: .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  Makefile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: pythonapp.yml
app/: __init__.py
app/api/v1/resources/: common.py
app/common/: swagger_docs.py
docker/dev/: Makefile  devenv-with-local-db.yml  entrypoint.sh  local_pg_hba.conf  local_postgresql.conf
docker/postgres/: Makefile  entrypoint.sh  pg_hba.conf  pg_ident.conf  postgresql.conf
etc/: config.yml
src/flask_bp/api/: __init__.py
src/flask_bp/api/common/: __init__.py  swagger_docs.py
src/flask_bp/api/database/: __init__.py
src/flask_bp/api/database/models/: __init__.py  user.py
src/flask_bp/api/v1/: __init__.py
src/flask_bp/api/v1/resources/: __init__.py  common.py  user.py
src/flask_bp/api/v1/schemas/: __init__.py  common.py  users.py
tests/: __init__.py  _fixtures.py  conftest.py  test_common_api.py
